Kubernetes/Ejercicio3/serviceCI-todo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
  - port: 8090
    targetPort: 8090
