Kubernetes/Ejercicio3/serviceCI-todo-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-todo-front
spec:
  type: ClusterIP
  selector:
    app: todo-front
  ports:
  - port: 8080
    targetPort: 80
