Kubernetes/Ejercicio3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: testhugo.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: service-todo-api
            port: 
              number: 8090
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-todo-front
            port:
              number: 8080
